--- a/products/product.html
+++ b/products/product.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <!-- <link rel="stylesheet" href="/bootstrap/css/bootstrap-grid.css"> -->
   <style>
     .nav {
       content: justify center;
@@ -18,6 +19,18 @@
     button{
        background-color: rgb(66, 66, 177);
        
+    }
+    .callbutton{
+      padding-left: 500px;
+      
+    }
+    .row{
+      margin: 30px;
+      border: solid rgb(9, 99, 9);
+      border-radius: 25px;
+    }
+    .card-img-top{
+      height: 200px;
     }
   </style>
   <title>Products</title>
@@ -36,11 +49,37 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
+              <img class="card-img-top" src="/image/milk.jpg" alt="flowers">
+              <p class="card text">Milk <br>
+                organic <br>
+                UGX 2500 @bottle
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm callbutton"><i class="bi bi-telephone"></i>call</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="/image/dairy.jpg" alt="flowers">
+              <p class="card text">Yoghurt <br>
+                UGX 2500 each
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
               <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
+              <p class="card text"> <br>
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -52,28 +91,7 @@
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
-              </p>
-              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
-              </p>
-              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -85,33 +103,36 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
+              <img class="card-img-top" src="/image/fruits.jpg" alt="flowers">
+              <p class="card text">fruits <br>
+                UGX 5000 @batch
+              </p>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
+            </div>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="card">
+            <div class="card-body">
+              <img class="card-img-top" src="/image/crops.jpg" alt="flowers">
+              <p class="card text">Mangoes <br>
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
-              </p>
-              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="card">
-            <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
+              <img class="card-img-top" src="/image/crop.jpg" alt="flowers">
+              <p class="card text">Carrots <br>
                 UGX 5000 @bouquet
               </p>
               <button type="button"class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -119,10 +140,11 @@
           <div class="card">
             <div class="card-body">
               <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
+              <p class="card text">Cabbege <br>
                 UGX 5000 @bouquet
               </p>
               <button type="button"class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button> 
             </div>
           </div>
         </div>
@@ -135,10 +157,11 @@
           <div class="card">
             <div class="card-body">
               <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
+              <p class="card text">hen <br>
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -150,6 +173,7 @@
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -161,6 +185,7 @@
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -172,6 +197,7 @@
                 UGX 5000 @bouquet
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
