--- a/auth/registerUfarmer.html
+++ b/auth/registerUfarmer.html
@@ -1,63 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <style>
-       .image {
-            background-image: url("/image/farmland.jpg");
-            /* The image used */
-            background-color: #cccccc;
-            /* Used if the image is unavailable */
-            height: 800px;
-            /* You must set a specified height */
-            background-position: center;
-            /* Center the image */
-            background-repeat: no-repeat;
-            /* Do not repeat the image */
-            background-size: cover;
-            /* Resize the background image to cover the entire container */
-        }
-    </style>
-    <title>farmer one</title>
-  </head>
 
-  <body>
-    <!-- nav starts Here -->
-    <div w3-include-html="/includes/navbar.html"></div>
-    <!-- nav bar ends here -->
-    <div class="image">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+  <style>
+    .image {
+      background-image: url("/image/farmland.jpg");
+      /* The image used */
+      background-color: #cccccc;
+      /* Used if the image is unavailable */
+      height: 800px;
+      /* You must set a specified height */
+      background-position: center;
+      /* Center the image */
+      background-repeat: no-repeat;
+      /* Do not repeat the image */
+      background-size: cover;
+      /* Resize the background image to cover the entire container */
+    }
+    .card{
+      margin-top: 30px;
+    }
+  </style>
+  <title>RegisterUF</title>
+</head>
+
+<body>
+  <!-- nav starts Here -->
+  <div w3-include-html="/includes/navbar.html"></div>
+  <!-- nav bar ends here -->
+  <div class="image">
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
-            <form
-              id="regform"
-              action="#"
-              onsubmit="return validate (event)"
-              method="post"
-            >
+            <form id="regform" action="#" onsubmit="return validate (event)" method="post">
               <div class="form-group">
                 <label>First name:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="firstname"
-                  id="fName"
-                />
+                <input type="text" class="form-control" name="firstname" id="fName" />
                 <small id="fNameErr"></small>
               </div>
               <div class="form-group">
                 <label>Second name:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="secondname"
-                  id="sName"
-                />
+                <input type="text" class="form-control" name="secondname" id="sName" />
                 <small id="sNameErr"></small>
               </div>
               <div class="form-group">
@@ -68,31 +57,16 @@
               <div class="form-group">
                 <label>Gender:</label>
                 <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="gender"
-                    id="male"
-                  /><span>Male</span>
+                  <input class="form-check-input" type="radio" name="gender" id="male" /><span>Male</span>
                 </label>
                 <label class="form-check form-check-inline">
-                  <input
-                    class="form-check-input"
-                    type="radio"
-                    name="gender"
-                    id="female"
-                  /><span>Female</span>
+                  <input class="form-check-input" type="radio" name="gender" id="female" /><span>Female</span>
                 </label>
                 <small id="gndErr"></small>
               </div>
               <div class="form-group">
                 <label>Phone number:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="phone number"
-                  id="pNum"
-                />
+                <input type="text" class="form-control" name="phone number" id="pNum" />
                 <small id="pNumErr"></small>
               </div>
               <div class="form-group">
@@ -102,22 +76,12 @@
               </div>
               <div class="form-group">
                 <label>Ward:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="ward name"
-                  id="wd"
-                />
+                <input type="text" class="form-control" name="ward name" id="wd" />
                 <small id="wdErr"></small>
               </div>
               <div class="form-group">
                 <label>Activities carried out:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="activites"
-                  id="act"
-                />
+                <input type="text" class="form-control" name="activites" id="act" />
                 <small id="actErr"></small>
               </div>
               <div class="form-group">
@@ -127,22 +91,12 @@
               </div>
               <div class="form-group">
                 <label>Unique id:</label>
-                <input
-                  type="number"
-                  class="form-control"
-                  name="unique id"
-                  id="uI"
-                />
+                <input type="number" class="form-control" name="unique id" id="uI" />
                 <small id="uIErr"></small>
               </div>
               <div class="form-group">
                 <label for="pwd">Password:</label>
-                <input
-                  type="password"
-                  class="form-control"
-                  id="pwd"
-                  name="password"
-                />
+                <input type="password" class="form-control" id="pwd" name="password" />
                 <small id="pwdErr"></small>
               </div>
               <div class="checkbox">
@@ -156,12 +110,13 @@
         </div>
       </div>
     </div>
-    </div>
-    <!-- footer starts here -->
-    <div w3-include-html="/includes/footer.html"></div>
-    <!-- footer ends here -->
-    <script src="/bootstrap/js/bootstrap.js"></script>
-    <script src="/js/uFarmerValidate.js"></script>
-    <script src="/includes/custom.js"></script>
-  </body>
+  </div>
+  <!-- footer starts here -->
+  <div w3-include-html="/includes/footer.html"></div>
+  <!-- footer ends here -->
+  <script src="/bootstrap/js/bootstrap.js"></script>
+  <script src="/js/uFarmerValidate.js"></script>
+  <script src="/includes/custom.js"></script>
+</body>
+
 </html>
