--- a/products/product.html
+++ b/products/product.html
@@ -16,21 +16,30 @@
     .row {
       padding-bottom: 30px;
     }
-    button{
-       background-color: rgb(66, 66, 177);
-       
+
+    button {
+      background-color: rgb(66, 66, 177);
+
     }
-    .callbutton{
+
+    .callbutton {
       padding-left: 500px;
-      
+
     }
-    .row{
+
+    .row {
       margin: 30px;
       border: solid rgb(9, 99, 9);
       border-radius: 25px;
     }
-    .card-img-top{
+
+    .card-img-top {
       height: 200px;
+    }
+
+    h5 {
+      text-align: right;
+      font-size: medium;
     }
   </style>
   <title>Products</title>
@@ -46,24 +55,26 @@
     <div class="container-fluid">
       <div class="row">
         <h4>Diary products</h4>
+        <h5>See all</h5>
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="/image/milk.jpg" alt="flowers">
+              <img class="card-img-top" src="/image/milk.jpg" alt="milk">
               <p class="card text">Milk <br>
-                organic <br>
+                organic || Farmer: Mike <br>
                 UGX 2500 @bottle
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
-              <button type="button" class="btn btn-success btn-sm callbutton"><i class="bi bi-telephone"></i>call</button>
+              <button type="button" class="btn btn-success btn-sm callbutton"><i
+                  class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="/image/dairy.jpg" alt="flowers">
-              <p class="card text">Yoghurt <br>
+              <img class="card-img-top" src="/image/dairy.jpg" alt="yoghurt">
+              <p class="card text">Yoghurt || Farmer: <br>
                 UGX 2500 each
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
@@ -74,9 +85,9 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text"> <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/yoghurt.jpg" alt="yoghurt">
+              <p class="card text"> yoghurt || Farmer: <br>
+                UGX 5000 each
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
@@ -86,9 +97,9 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/yoghurt (2).jpg" alt="yoghurt">
+              <p class="card text">yoghurt || Farmer: <br>
+                UGX 5000 each
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
@@ -100,11 +111,12 @@
     <div class="container-fluid">
       <div class="row">
         <h4>Horticulture products</h4>
+        <h5>See all</h5>
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="/image/fruits.jpg" alt="flowers">
-              <p class="card text">fruits <br>
+              <img class="card-img-top" src="/image/beans.jpg" alt="beans">
+              <p class="card text">beans || Farmer: <br>
                 UGX 5000 @batch
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
@@ -115,9 +127,9 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="/image/crops.jpg" alt="flowers">
-              <p class="card text">Mangoes <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/oranges.jpg" alt="oranges">
+              <p class="card text">oranges || Farmer: <br>
+                UGX 5000
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
@@ -127,11 +139,11 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="/image/crop.jpg" alt="flowers">
-              <p class="card text">Carrots <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/carrots.jpg" alt="carrots">
+              <p class="card text">Carrots || Farmer: <br>
+                UGX 3000 @bundle
               </p>
-              <button type="button"class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
@@ -139,12 +151,12 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Cabbege <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/cauli.jpg" alt="cauliflower">
+              <p class="card text">Cauliflower || Farmer: <br>
+                UGX 5000 @
               </p>
-              <button type="button"class=" btn btn-primary btn-sm">Add to cart</button>
-              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button> 
+              <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
+              <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
             </div>
           </div>
         </div>
@@ -153,12 +165,13 @@
     <div class="container-fluid">
       <div class="row">
         <h4>Poultry</h4>
+        <h5>See all</h5>
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">hen <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/layers.jpg" alt="hen">
+              <p class="card text">layers || Farmer: <br>
+                UGX 20000 @hen
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
@@ -168,9 +181,9 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/chicks.jpg" alt="chicks">
+              <p class="card text">chicks || Farmer: <br>
+                UGX 8000 @chick
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
@@ -180,9 +193,9 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/eggs.jpg" alt="eggs">
+              <p class="card text">Eggs || Farmer: <br>
+                UGX 15000 @ tray
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
@@ -192,9 +205,9 @@
         <div class="col-3">
           <div class="card">
             <div class="card-body">
-              <img class="card-img-top" src="" alt="flowers">
-              <p class="card text">Flowers <br>
-                UGX 5000 @bouquet
+              <img class="card-img-top" src="/image/broilers.jpg" alt="broilers">
+              <p class="card text">Broilers || Farmer: <br>
+                UGX 25000 @hen
               </p>
               <button type="button" class=" btn btn-primary btn-sm">Add to cart</button>
               <button type="button" class="btn btn-success btn-sm"><i class="bi bi-telephone"></i>call</button>
