--- a/auth/signup.html
+++ b/auth/signup.html
@@ -22,7 +22,7 @@
                             <input type="email" class="form-control" placeholder="Enter email" id="email">
                         </div>
                         <div class="form-group">
-                            <label for="email">First name:</label>
+                            <label for="email">Last name:</label>
                             <input type="email" class="form-control" placeholder="Enter email" id="email">
                         </div>
                         <div class="form-group">
