--- a/landing pages/AO.html
+++ b/landing pages/AO.html
@@ -17,14 +17,15 @@
     <!-- Sidebar -->
     <div class="w3-sidebar w3-bar-block w3-border-right" id="mySidebar">
         <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
-        <a href="#" class="w3-bar-item w3-button">Link 1</a>
-        <a href="#" class="w3-bar-item w3-button">Link 2</a>
-        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+        <a href="/auth/registerFone.html" class="w3-bar-item w3-button">Register new Farmer one</a>
+        <a href="#" class="w3-bar-item w3-button"> Registered Farmer Ones</a>
+        <a href="#" class="w3-bar-item w3-button">Messages</a>
+        <a href="#" class="w3-bar-item w3-button">Log out</a>
     </div>
         <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">☰</button>
-    <!-- Sidebar ends -->
-
-
+        <!-- Sidebar ends -->
+        
+        
 
 
 
@@ -43,15 +44,7 @@
         <script src="/bootstrap/js/bootstrap.js"></script>
         <script src="/bootstrap/js/bootstrap.bundle.js"></script>
         <script src="/includes/custom.js"></script>
-        <script>
-            function w3_open() {
-                document.getElementById("mySidebar").style.display = "block";
-            }
-
-            function w3_close() {
-                document.getElementById("mySidebar").style.display = "none";
-            }
-        </script>
+        <script src="/includes/sidebar.js"></script>
 </body>
 
 </html>
